[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Editor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Missions/Agar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=3]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BigViewport" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="BigViewport"]
size = Vector2( 1024, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Editor" parent="BigViewport/Viewport" instance=ExtResource( 1 )]

[node name="SmallViewport" type="ViewportContainer" parent="."]
anchor_left = 0.75
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
margin_right = -40.0
margin_bottom = -40.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="SmallViewport"]
size = Vector2( 256, 150 )
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true

[node name="Agar" parent="SmallViewport/Viewport" instance=ExtResource( 2 )]
[connection signal="gui_input" from="BigViewport" to="." method="_on_BigViewport_gui_input"]
[connection signal="gui_input" from="SmallViewport" to="." method="_on_SmallViewport_gui_input"]
